cambio de width acompañantes

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
                 <div>
                     <label for="acompanantes" class="block text-sm font-medium text-gray-700">¿Con cuántas personas
-                        viniste? (sin contarte a vos):</label>
+                        viniste?:</label>
                     <select id="acompanantes" name="Acompanantes"
-                        class="mt-1 block w-1/4 pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-                        <option value="0">0 (Vine solo/a)</option>
+                        class="mt-1 block pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+                        <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
