cambio de width acompañantes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <label for="acompanantes" class="block text-sm font-medium text-gray-700">¿Con cuántas personas
                         viniste?:</label>
                     <select id="acompanantes" name="Acompanantes"
-                        class="mt-1 block pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+                        class="mt-1 block pl-3 pr-10 py-2 text-base  border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
                         <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
