--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <div class="fixed top-0 bg-white shadow-md py-6 flex flex-row items-center justify-center w-full">
         <img src="./Assets/feria-logo.png" alt="">
     </div>
-    <section id="hero" class="container mx-auto mt-32 pb-10 sm:pb-0 flex flex-col-reverse sm:flex-row items-center justify-center gap-10 px-4 sm:px-0">
+    <section id="hero"
+        class="container mx-auto mt-32 pb-10 sm:pb-0 flex flex-col-reverse sm:flex-row items-center justify-center gap-10 px-4 sm:px-0">
         <div class="sm:w-1/2 w-full">
             <img class="h-[900px] ml-auto" src='./Assets/flyer-navidad.jpg' alt="">
         </div>
         <div class="sm:w-1/2 w-full">
-            <form action="https://script.google.com/macros/s/AKfycbzeHcmAe04yU1IF8-cwbjKiYG-WyHdSsCToe004etT_MMPQ1JFqQIbXJ3Q68LI4HOZ_sQ/exec" method="POST"
-                class="max-w-xl mx-auto p-6 bg-white shadow-lg rounded-lg space-y-4">
+            <form
+                action="https://script.google.com/macros/s/AKfycbzeHcmAe04yU1IF8-cwbjKiYG-WyHdSsCToe004etT_MMPQ1JFqQIbXJ3Q68LI4HOZ_sQ/exec"
+                method="POST" class="max-w-xl mx-auto p-6 bg-white shadow-lg rounded-lg space-y-4">
                 <h2 class="text-2xl font-bold text-gray-800 mb-6">Registro ingresantes</h2>
 
                 <div>
@@ -95,6 +97,22 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </section>
+    <section id="btn_sorteo" class="pt-10 px-4">
+        <div class="container mx-auto rounded-lg shadow-lg py-6 mx-4 mb-8 bg-white">
+            <h2 class="text-center text-3xl font-bold text-gray-800 mb-6 mt-10">
+                Participa del sorteo!
+            </h2>
+            <p class="text-center text-gray-700 mb-6 px-4">
+                Al completar el formulario, automáticamente participarás en el sorteo de increíbles premios
+            </p>
+            <div class="flex justify-center mb-10">
+                <a href="./sorteo.html"
+                    class="py-3 px-6 bg-amber-400 text-white font-semibold rounded-lg shadow-md hover:bg-amber-600 hover:cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
+                    Ir al Sorteo
+                </a>
+            </div>
         </div>
     </section>
 </body>
